--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-06-17  Kirit Saelensminde  <kirit@felspar.com>
+ Added `f5::threading::tsmap::insert_or_assign`.
+
 2015-06-07  Kirit Saelensminde  <kirit@felspar.com>
  Add a map like container based on `std::vector` whose interface is controlled by a policy type.
 
