Add a policy for promoting weak pointers to shared pointers.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2015-06-18  Kirit Saelensminde  <kirit@felspar.com>
+ * Add a policy for promoting weak pointers to shared pointers.
  * Add `insert_or_assign_if` which allows atomic overwrite of values under user control.
  * `insert_or_assign` needs to wrap the values it returns in the right way.
 
