--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-06-21  Kirit Saelensminde  <kirit@felspar.com>
+ Add an initial `f5::tsset` implementation.
+
 2015-06-20  Kirit Saelensminde  <kirit@felspar.com>
  * Allow fetching of a size estimate from the `tsmap`.
  * Add  a `tsmap::remove_if` member that allows items to be removed.
