--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-06-25  Kirit Saelensminde  <kirit@felspar.com>
+ Fix the interface to `tsmap::find` so that it is safe. We can't returna pointer to the value, we need to return a copy otherwise there is a race if values are also being inserted.
+
 2015-06-21  Kirit Saelensminde  <kirit@felspar.com>
  * Allow the `f5::tsmap` to be iterated over.
  * Add an initial `f5::tsset` implementation.
