--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-06-29  Kirit Saelensminde  <kirit@felspar.com>
+ `tsset` gets a `pop_back` member which will pull off and return the highest item in the set.
+
 2015-06-25  Kirit Saelensminde  <kirit@felspar.com>
  * Add a `f5::threading::boost_asio::reactor_pool` thread pool suitable for use with the `boost::asio::io_service`.
  * Fix the interface to `tsmap::find` so that it is safe. We can't returna pointer to the value, we need to return a copy otherwise there is a race if values are also being inserted.
