--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2015-09-02  Kirit Saelensminde  <kirit@felspar.com>
+ Add a todo about the use of the `shared_ptr` for eventfd jobs.
+
 2015-08-30  Kirit Saelensminde  <kirit@felspar.com>
  `tsset` now has a `remove` method that takes a value that it will remove if the value is in the set.
 
