--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2015-09-02  Kirit Saelensminde  <kirit@felspar.com>
+ Allow a value of zero for the limit in the limiter and fix an off by one value.
  Add a todo about the use of the `shared_ptr` for eventfd jobs.
 
 2015-08-30  Kirit Saelensminde  <kirit@felspar.com>
