--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-05-04  Kirit Saelensminde  <kirit@felspar.com>
+ The `boost_asio` namespace has been moved so that it can be used in multiple F5 libraries.
+
 2015-09-26  Kirit Saelensminde  <kirit@felspar.com>
  Add `unlimited` channel for `eventfd` on Linux.
 
