--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-11-14  Kirit Saelensminde  <kirit@felspar.com>
+ * Removed a dependancy on algorithms header.
+
 2016-05-04  Kirit Saelensminde  <kirit@felspar.com>
  The `boost_asio` namespace has been moved so that it can be used in multiple F5 libraries.
 
