--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 2016-11-14  Kirit Saelensminde  <kirit@felspar.com>
+ * Added a missing header.
  * Removed a dependancy on algorithms header.
 
 2016-05-04  Kirit Saelensminde  <kirit@felspar.com>
