--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2016-12-14  Kirit Saelensminde  <kirit@felspar.com>
+ `lower_bound` on `tsmap` takes the key value by reference not by copy.
+
 2016-05-04  Kirit Saelensminde  <kirit@felspar.com>
  The `boost_asio` namespace has been moved so that it can be used in multiple F5 libraries.
 
