--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017-04-25  Kirit Saelensminde  <kirit@felspar.com>
+ The `reactor_pool` can be closed and its threads joined at any time.
+
 2016-12-17  Kirit Saelensminde  <kirit@felspar.com>
  Allow for fetching of the Boost.ASIO work pool thread count.
 
