--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017-05-19  Kirit Saelensminde  <kirit@felspar.com>
+ Bypass the coroutine unwind exceptions in for the reactor and sync.
+
 2017-05-15  Kirit Saelensminde  <kirit@felspar.com>
  Move the `reactor_pool` to `reactor.hpp`
 
