Replace the use of `eventfd` with a pipe.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2017-08-02  Kirit Saelensminde  <kirit@felspar.com>
- Remove the deprecated `f5/threading/boost-asio.hpp` header.
+ * Replace the use of `eventfd` with a pipe.
+ * Remove the deprecated `f5/threading/boost-asio.hpp` header.
 
 2017-05-19  Kirit Saelensminde  <kirit@felspar.com>
  * Don't include any Fost headers.
