--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2018-09-05  Kirit Saelensminde  <kirit@felspar.com>
+ Add `clear` member to `tsmap` and improve the return type for `unique_ptr`.
+
 2018-09-02  Kirit Saelensminde  <kirit@felspar.com>
  Fix a bug in `tsmap::insert_or_assign` which caused it to return the wrong value.
 
