--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2020-01-17  Kirit Saelensminde  <kirit@felspar.com>
+ `tsmap::add_if_not_found` miss lambda can now mutate the found item.
+
 2019-03-30  Kirit Saelensminde  <kirit@felspar.com>
  Replace `std::experimental::optional` with `std::optional`
 
